--- a/report_template.html
+++ b/report_template.html
@@ -1,30 +1,57 @@
 <!DOCTYPE html>
 <head>
     <style>
+        body {
+            font-family: 'Open Sans', sans-serif;
+            line-height: 1.5;
+        }
+        table {
+            border-collapse: collapse;
+            table-layout: fixed
+        }
+        thead {
+            border-block-end: 2px solid;
+            background: whitesmoke;
+        }
+        th,
+        td {
+            border: 1px solid lightgrey;
+            padding: 0.25rem 0.75rem;
+            vertical-align: baseline;
+        }
+        .state {
+            color: white;
+            text-align: center;
+        }
         .c_true {
-        color: green;
-    }
-
-    .c_false {
-        color: red;
-    }
+            background-color: green;
+        }
+        .c_false {
+            background-color: red;
+        }
     </style>
 </head>
 <body>
     <table>
-        <tr>
-            <th>ID</th>
-            <th>Traced</th>
-            <th>Covered</th>
-            <th>Passed</th>
-        </tr>
-        {% for req in requirements %}
-        <tr>
-            <td class="req">{{ req.id }}</td>
-            <td class="c_{{ req.trace_info.traced }}">{{ req.trace_info.traced }}</td>
-            <td class="c_{{ req.test_coverage_info.covered }}">{{ req.test_coverage_info.covered }}</td>
-            <td class="c_{{ req.test_coverage_info.passed }}">{{ req.test_coverage_info.passed }}</td>
-        </tr>
-        {% endfor %}
+        <thead>
+            <tr>
+                <th>Requirement</th>
+                <th>Passed/Verified</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for req in requirements %}
+            <tr>
+                <td class="req">{{ req.id }}{% if req.manual %} (manual){% endif %}</td>
+                {% if req.test_coverage_info.passed %}
+                <td class="c_true state">passed</td>
+                {% elif req.verified_info | length > 0 %}
+                <td class="c_true state">verified</td>
+                {% else %}
+                <td class="c_false state">false</td>
+                {% endif %}
+            </tr>
+            {% endfor %}
+        </tbody>
     </table>
 </body>
